<resources>
    <string name="app_name">Data Example</string>

    <string name="device_header">Device</string>
    <string name="device_info">Device Information</string>
    <string name="device_properties">Device Properties</string>
    <string name="wearable_device_info">Wearable Device Information</string>
    <string name="wearable_sensor_header">Sensors</string>
    <string name="wearable_sensor_info">Sensor Information</string>
    <string name="wearable_sensor_config">Sensor Configuration</string>
    <string name="wearable_sensor_data">Sensor Data</string>
    <string name="wearable_gesture_header">Gestures</string>
    <string name="wearable_gesture_config">Gesture Configuration</string>
    <string name="wearable_gesture_data">Gesture Data</string>

    <string name="accelerometer">Accelerometer</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="magnetometer">Magnetometer</string>
    <string name="rotation_vector">Rotation Vector</string>
    <string name="game_rotation_vector">Game Rotation Vector</string>
    <string name="orientation">Orientation</string>
    <string name="uncalibrated_magnetometer">Uncalibrated Magnetometer</string>
    <string name="device_info_title">Device Information</string>
    <string name="device_properties_title">Device Properties</string>
    <string name="device_fragment_title">Device</string>
    <string name="device_info_system_id">System ID</string>
    <string name="device_info_model_number">Model Number</string>
    <string name="device_info_serial_number">Serial Number</string>
    <string name="device_info_firmware_rev">Firmware Revision</string>
    <string name="device_info_software_rev">Software Revision</string>
    <string name="device_info_hardware_rev">Hardware Revision</string>
    <string name="device_info_manufacturer_name">Manufacturer Name</string>
    <string name="device_info_regulatory_cert">Regulatory Certification Data List</string>
    <string name="device_info_pnp_id">PnP ID</string>
    <string name="ar_device_info_major_version">Bose AR Major Version</string>
    <string name="ar_device_info_minor_version">Bose AR Minor Version</string>
    <string name="ar_device_info_product_id">Product ID</string>
    <string name="ar_device_info_variant">Variant</string>
    <string name="ar_device_info_transmission_period">Transmission Period</string>
    <string name="ar_device_info_max_payload">Max payload per transmission period</string>
    <string name="ar_device_info_max_sensors">Max active sensors</string>
    <string name="ar_device_info_device_status">Device Status</string>
    <string name="ar_device_info_available_sensors">Available Sensors</string>
    <string name="ar_device_info_available_gestures">Available Gestures</string>
    <string name="single_tap">Single Tap</string>
    <string name="double_tap">Double Tap</string>
    <string name="head_nod">Head Nod</string>
    <string name="head_shake">Head Shake</string>
    <string name="device_services_refresh">Refresh services</string>
    <string name="sensor_info_type">Sensor Type</string>
    <string name="sensor_info_scaled_range">Scaled Value Range</string>
    <string name="sensor_info_raw_range">Raw Value Range</string>
    <string name="sensor_info_sample_len">Sample Length</string>
    <string name="sample_periods">Sample Periods</string>
    <string name="sample_period_ms">%d ms</string>
    <string name="sample_period_ms_hz">%1$d ms (%2$s Hz)</string>
    <string name="sample_period_320">320 ms</string>
    <string name="sample_period_160">160 ms</string>
    <string name="sample_period_80">80 ms</string>
    <string name="sample_period_40">40 ms</string>
    <string name="sample_period_20">20 ms</string>
    <string name="sample_period_10">10 ms</string>
    <string name="sample_period_5">5 ms</string>
    <string name="sensor_data">Sensor Data</string>
    <string name="sensor_data_sample_period">Sample Period</string>
    <string name="sensor_data_change_period">Change</string>
    <string name="sensor_data_x">X</string>
    <string name="sensor_data_y">Y</string>
    <string name="sensor_data_z">Z</string>
    <string name="sensor_data_w">W</string>
    <string name="sensor_data_timestamp">Timestamp</string>
    <string name="sensor_data_accuracy">Accuracy</string>
    <string name="sensor_data_frequency">Observed Frequency</string>
    <string name="sensor_data_vector">Vector</string>
    <string name="sensor_data_vector_bias">Bias</string>
    <string name="sensor_data_pitch">Pitch</string>
    <string name="sensor_data_roll">Roll</string>
    <string name="sensor_data_yaw">Yaw</string>
    <string name="sensor_data_frequency_format">%d Hz</string>
    <string name="sample_period_dialog_title_one">Select the sample period for %s</string>
    <string name="sample_period_dialog_title_all">Select the sample period for all enabled sensors</string>
    <string name="cancel">Cancel</string>
    <string name="sensor_config_title">Sensor Config</string>
    <string name="sensor_config_disable_sensor">Disable %s</string>
    <string name="sensor_config_help">Select a sensor to change sample period. Note that all enabled sensors will be updated to have the same sample period.</string>
    <string name="sensor_config_disable_all">Disable all sensors</string>
    <string name="gesture_config_enable_all">Enable all gestures</string>
    <string name="gesture_config_disable_all">Disable all gestures</string>
    <string name="gesture_config_fragment_title">Gesture Config</string>
    <string name="gesture_data_fragment_title">Gesture Data</string>
    <string name="refresh_data_menu">Refresh</string>
    <string name="device_error_firmware_update_required">Firmware update required</string>
    <string name="device_error_unsupported_device">Unsupported device</string>
    <string name="device_error_missing_characteristic">Missing characteristic %1$s on service %2$s</string>
    <string name="device_error_no_device_types_found">No matching device type found</string>
    <string name="device_error_refresh_required">Inconsistent device properties. Please unpair (\"forget\") and pair the device.</string>
    <string name="wearable_error_format">Error: %s</string>
    <string name="wearable_error_unknown">Unknown error</string>
    <string name="wearable_error_invalid_response">Invalid response</string>
    <string name="wearable_error_disconnected_by_device">Disconnected by device</string>
    <string name="wearable_error_device_out_of_range">Device went out of range</string>
    <string name="wearable_error_device_not_found">Device is no longer available</string>
    <string name="wearable_error_invalid_request_length">Invalid request length</string>
    <string name="wearable_error_invalid_sample_period">Invalid sample period</string>
    <string name="wearable_error_invalid_sensor_configuration">Invalid sensor configuration</string>
    <string name="wearable_error_config_exceeds_max_throughput">Requested configuration exceeds maximum available throughput</string>
    <string name="wearable_error_wearable_sensor_service_unavailable">Wearable sensors service is currently unavailable</string>
    <string name="wearable_error_invalid_sensor">Invalid sensor</string>
    <string name="wearable_error_timeout">Timeout</string>
    <string name="clear">Clear</string>
    <string name="no_device_selected">Can not continue without Bose AR, please select a device</string>
    <string name="scan_failed">Could not start scan: %s</string>
    <string name="scan_error_already_started">Already started</string>
    <string name="scan_error_internal">Internal Error</string>
    <string name="scan_error_permission_denied">Permission denied</string>
    <string name="scan_error_bluetooth_disabled">Bluetooth is disabled</string>
    <string name="scan_error_feature_unsupported">Feature not supported</string>
    <string name="scan_error_application_registration_failed">Application registration failed</string>
    <string name="scan_error_unknown">Unknown error</string>
    <string name="autoselect_desc">If checked, will attempt to connect to the last-used device if it is found within five seconds.</string>
    <string name="autoselect_switch">Connect to last</string>
    <string name="search_for_devices">Connect</string>
    <string name="use_simulated_device">Use Simulated Device</string>
    <string name="version_name">BoseWearable %1$s (%2$d)</string>
    <string name="focus_received">Received focus</string>
    <string name="focus_lost">No focus</string>
    <string name="focus_request">Request Focus</string>
    <string name="sensors_suspended">Sensors suspended</string>
    <string name="sensors_resumed">Sensors resumed</string>
    <string name="device_props_protocol_version">Protocol Version</string>
    <string name="device_props_auth_supported">Authentication Supported</string>
    <string name="device_props_guid">GUID</string>
    <string name="device_props_product_name">Product Name</string>
    <string name="device_props_battery_level">Battery Level</string>
    <string name="not_available"><![CDATA[<not available>]]></string>
    <string name="device_props_cnc">Noise Cancellation</string>
    <string name="device_props_anr">Active Noise Reduction</string>
    <string name="cnc_disabled">Disabled</string>
    <string name="cnc_dialog_title">Controllable Noise Cancellation Level</string>
    <string name="name_dialog_title">Please enter new name</string>
    <string name="anr_dialog_title">Please select new mode</string>
    <string name="touch_and_hold">Touch and hold</string>
    <string name="input_gesture">Input</string>
    <string name="affirmative_gesture">Affirmative</string>
    <string name="negative_gesture">Negative</string>
    <string name="boolean_yes">yes</string>
    <string name="boolean_no">no</string>
    <string name="insufficient_api_level">API level %d or higher required</string>
</resources>
